# Django-Base-Template-with-uv

./: .env  .gitignore  db.sqlite3  pyproject.toml
apps/: base_models.py
apps/authentication/: urls.py
apps/users/: admin.py  managers.py  models.py  urls.py
mysite/: settings.py  setup_environment.py  urls.py
